minor refactor and fixes to spacing etc

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -51,6 +51,6 @@
 }
 
 .spacer {
-  margin-top: 10rem;
+  margin-top: 8.5rem;
   width: 100%;
 }
